Fixing some findbugs warnings.