@@ -25,12 +25,20 @@ import java.util.Set;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.wicketstuff.security.actions.*;
+import org.wicketstuff.security.actions.Access;
+import org.wicketstuff.security.actions.ActionFactory;
+import org.wicketstuff.security.actions.Actions;
+import org.wicketstuff.security.actions.AllActions;
+import org.wicketstuff.security.actions.Enable;
+import org.wicketstuff.security.actions.Inherit;
+import org.wicketstuff.security.actions.RegistrationException;
+import org.wicketstuff.security.actions.Render;
+import org.wicketstuff.security.actions.WaspAction;
 
 /**
- * Default implementation of an action factory. It handles access, inherit, render and
- * enable actions. Because actions are immutable and in order to improve performance,
- * generated actions are cached.
+ * Default implementation of an action factory. It handles access, inherit, render and enable
+ * actions. Because actions are immutable and in order to improve performance, generated actions are
+ * cached.
  * 
  * @author marrink
  */
@@ -41,7 +49,7 @@ public class TestActionFactory implements ActionFactory
 	/**
 	 * Maximum power of 2 that can be used to assign to an action.
 	 */
-	protected static final int maxAssingableAction = (int) Math.pow(2, 30);
+	protected static final int maxAssingableAction = (int)Math.pow(2, 30);
 
 	/**
 	 * maps int's to Strings.
@@ -58,8 +66,7 @@ public class TestActionFactory implements ActionFactory
 	/**
 	 * Maps int's to actions. and classes to actions.
 	 */
-	private Map<Class< ? extends WaspAction>, TestAction> registeredClassActions =
-		new HashMap<Class< ? extends WaspAction>, TestAction>();
+	private Map<Class<? extends WaspAction>, TestAction> registeredClassActions = new HashMap<Class<? extends WaspAction>, TestAction>();
 
 	private Map<Integer, TestAction> registeredIntActions = new HashMap<Integer, TestAction>();
 
@@ -73,8 +80,7 @@ public class TestActionFactory implements ActionFactory
 	 * Registers the default actions: access, inherit, render and enable.
 	 * 
 	 * @param key
-	 *            using this key the factory registers itself to the {@link Actions}
-	 *            object.
+	 *            using this key the factory registers itself to the {@link Actions} object.
 	 */
 	public TestActionFactory(Object key)
 	{
@@ -169,12 +175,12 @@ public class TestActionFactory implements ActionFactory
 		if (ja == null)
 		{
 			if (actions > maxAction)
-				throw new IllegalArgumentException("Max value for actions = " + maxAction
-					+ ", you used " + actions);
+				throw new IllegalArgumentException("Max value for actions = " + maxAction +
+					", you used " + actions);
 			if (actions < 0)
 				throw new IllegalArgumentException("Min value for actions = 0, you used " + actions);
 			ja = new TestAction(actions, buildActionString(actions), getFactoryKey());
-			cacheAction(new Integer(actions), ja);
+			cacheAction(Integer.valueOf(actions), ja);
 		}
 		return ja;
 
@@ -207,8 +213,7 @@ public class TestActionFactory implements ActionFactory
 	 * 
 	 * @param action
 	 *            the internal value of the action
-	 * @return the registered string or null if no string value was registered for this
-	 *         action.
+	 * @return the registered string or null if no string value was registered for this action.
 	 */
 	protected final String valueOf(Integer action)
 	{
@@ -216,9 +221,9 @@ public class TestActionFactory implements ActionFactory
 	}
 
 	/**
-	 * Builds a logically ordered comma separated string of all the actions this
-	 * permission has. Based on the logical and of the supplied actions. Subclasses should
-	 * always return the same string (action order) for the same action.
+	 * Builds a logically ordered comma separated string of all the actions this permission has.
+	 * Based on the logical and of the supplied actions. Subclasses should always return the same
+	 * string (action order) for the same action.
 	 * 
 	 * @param actions
 	 *            the internal action value
@@ -231,7 +236,7 @@ public class TestActionFactory implements ActionFactory
 		// estimate 10 chars per name
 		for (int i = -1; i < power; i++)
 		{
-			appendActionString(buff, actions, (registeredIntActions.get(i)).actions());
+			appendActionString(buff, actions, registeredIntActions.get(i).actions());
 		}
 		if (buff.length() > 0) // should always be the case
 			buff.delete(buff.length() - 2, buff.length());
@@ -251,7 +256,7 @@ public class TestActionFactory implements ActionFactory
 	protected final void appendActionString(StringBuffer buff, int actions, int waspAction)
 	{
 		if (implies(actions, waspAction))
-			buff.append(valueOf(new Integer(waspAction))).append(", ");
+			buff.append(valueOf(Integer.valueOf(waspAction))).append(", ");
 	}
 
 	/**
@@ -265,14 +270,13 @@ public class TestActionFactory implements ActionFactory
 	 */
 	protected final boolean implies(int actions, int action)
 	{
-		return ((actions & action) == action);
+		return (actions & action) == action;
 	}
 
 	/**
-	 * Parses a comma separated String containing actions. Access is the default and will
-	 * also be substituted for any empty or null String. using a string like 'render,
-	 * render' is pointless but does not brake anything. Order of the actions is also not
-	 * important.
+	 * Parses a comma separated String containing actions. Access is the default and will also be
+	 * substituted for any empty or null String. using a string like 'render, render' is pointless
+	 * but does not brake anything. Order of the actions is also not important.
 	 * 
 	 * @param actions
 	 * @return a logical and of the actions.
@@ -287,9 +291,9 @@ public class TestActionFactory implements ActionFactory
 			String[] actionz = actions.split(",");
 			String action = null;
 			Set<Integer> keys = stringValues.keySet();
-			for (int i = 0; i < actionz.length; i++)
+			for (String element : actionz)
 			{
-				action = actionz[i].trim();
+				action = element.trim();
 				if (action.equals(""))
 					break; // Access
 				if (action.equals("all"))
@@ -307,8 +311,8 @@ public class TestActionFactory implements ActionFactory
 					}
 				}
 				if (!found)
-					throw new IllegalArgumentException("Invalid action: " + action + " in: "
-						+ actions);
+					throw new IllegalArgumentException("Invalid action: " + action + " in: " +
+						actions);
 			}
 		}
 		return sum;
@@ -318,12 +322,12 @@ public class TestActionFactory implements ActionFactory
 	 * 
 	 * @see org.wicketstuff.security.actions.ActionFactory#getAction(java.lang.Class)
 	 */
-	public synchronized TestAction getAction(Class< ? extends WaspAction> waspActionClass)
+	public synchronized TestAction getAction(Class<? extends WaspAction> waspActionClass)
 	{
 		if (AllActions.class.isAssignableFrom(waspActionClass))
 		{
 			TestAction all = registeredClassActions.get(Access.class);
-			for (Class< ? extends WaspAction> action : registeredClassActions.keySet())
+			for (Class<? extends WaspAction> action : registeredClassActions.keySet())
 			{
 				all = all.add(registeredClassActions.get(action));
 			}
@@ -341,8 +345,8 @@ public class TestActionFactory implements ActionFactory
 	 * @see org.wicketstuff.security.actions.ActionFactory#register(java.lang.Class,
 	 *      java.lang.String)
 	 */
-	public synchronized TestAction register(Class< ? extends WaspAction> waspActionClass,
-			String name) throws RegistrationException
+	public synchronized TestAction register(Class<? extends WaspAction> waspActionClass, String name)
+		throws RegistrationException
 	{
 		if (AllActions.class.isAssignableFrom(waspActionClass))
 			throw new RegistrationException("Can not register 'all' actions");
@@ -361,8 +365,7 @@ public class TestActionFactory implements ActionFactory
 	}
 
 	/**
-	 * Returns the number of registered classes. By default there are 4 classes
-	 * registered.
+	 * Returns the number of registered classes. By default there are 4 classes registered.
 	 * 
 	 * @return the number of registered classes.
 	 */
@@ -379,12 +382,12 @@ public class TestActionFactory implements ActionFactory
 	 */
 	protected final int nextPowerOf2()
 	{
-		return (int) Math.pow(2, power);
+		return (int)Math.pow(2, power);
 	}
 
 	/**
-	 * Renames build in wicket actions to there wasp counterpart. more specifically it
-	 * converts the string to lowercase.
+	 * Renames build in wicket actions to there wasp counterpart. more specifically it converts the
+	 * string to lowercase.
 	 * 
 	 * @param name
 	 *            the name of the action
@@ -416,14 +419,14 @@ public class TestActionFactory implements ActionFactory
 	 * </code>
 	 * </pre>
 	 * 
-	 * Note all actions registered in this way must use nextPowerOf2() and then
-	 * immediately register the action to preserve consistency.
+	 * Note all actions registered in this way must use nextPowerOf2() and then immediately register
+	 * the action to preserve consistency.
 	 * 
 	 * @param waspActionClass
 	 *            the class under which to register the action
 	 * @param action
-	 *            the actual implementation (note that it does not need to implement the
-	 *            supplied waspActionClass)
+	 *            the actual implementation (note that it does not need to implement the supplied
+	 *            waspActionClass)
 	 * @return the action
 	 * @throws RegistrationException
 	 *             if the action can not be registered.
@@ -431,8 +434,8 @@ public class TestActionFactory implements ActionFactory
 	 * @see TestAction#TestAction(int, String, ActionFactory)
 	 * 
 	 */
-	protected final synchronized TestAction register(Class< ? extends WaspAction> waspActionClass,
-			TestAction action) throws RegistrationException
+	protected final synchronized TestAction register(Class<? extends WaspAction> waspActionClass,
+		TestAction action) throws RegistrationException
 	{
 		// sanity checks
 		if (AllActions.class.isAssignableFrom(waspActionClass))
@@ -442,19 +445,19 @@ public class TestActionFactory implements ActionFactory
 		int assignedPowerOf2 = nextPowerOf2();
 		if (assignedPowerOf2 > maxAssingableAction)
 			throw new RegistrationException(
-				"Unable to register an action with a base value greater then "
-					+ maxAssingableAction);
+				"Unable to register an action with a base value greater then " +
+					maxAssingableAction);
 		if (assignedPowerOf2 < 0)
 			throw new RegistrationException(assignedPowerOf2 + " is not a positive value");
 		// includes any implied actions
-		Integer powerOf2 = new Integer(action.actions());
+		Integer powerOf2 = Integer.valueOf(action.actions());
 		if (!implies(powerOf2.intValue(), assignedPowerOf2))
-			throw new RegistrationException("Unable to register action '" + action.getName()
-				+ "' with value " + powerOf2 + " expected " + assignedPowerOf2 + " or more.");
+			throw new RegistrationException("Unable to register action '" + action.getName() +
+				"' with value " + powerOf2 + " expected " + assignedPowerOf2 + " or more.");
 		// end of checks
 
 		stringValues.put(powerOf2, action.getName());
-		registeredIntActions.put(new Integer(power), action);
+		registeredIntActions.put(Integer.valueOf(power), action);
 		registeredClassActions.put(waspActionClass, action);
 		maxAction += assignedPowerOf2;
 		power++;
@@ -468,7 +471,7 @@ public class TestActionFactory implements ActionFactory
 	public List<WaspAction> getRegisteredActions()
 	{
 		List<WaspAction> actions = new ArrayList<WaspAction>(getNumberOfRegisteredClasses());
-		for (Class< ? extends WaspAction> action : registeredClassActions.keySet())
+		for (Class<? extends WaspAction> action : registeredClassActions.keySet())
 		{
 			actions.add(getAction(action));
 		}
@@ -476,8 +479,8 @@ public class TestActionFactory implements ActionFactory
 	}
 
 	/**
-	 * Clears registration and cached values. After you destroy this factory you must not
-	 * use it again.
+	 * Clears registration and cached values. After you destroy this factory you must not use it
+	 * again.
 	 * 
 	 * @see org.wicketstuff.security.actions.ActionFactory#destroy()
 	 */
@@ -520,7 +523,7 @@ public class TestActionFactory implements ActionFactory
 		 *            a single action class to imply, not null
 		 */
 		public ImpliesOtherAction(int actions, String name, Object key, TestActionFactory factory,
-				Class< ? extends WaspAction> otherAction)
+			Class<? extends WaspAction> otherAction)
 		{
 			super(actions | factory.getAction(otherAction).actions(), name, key);
 		}
@@ -538,14 +541,14 @@ public class TestActionFactory implements ActionFactory
 		 *            any number of action classes to imply
 		 */
 		public ImpliesOtherAction(int actions, String name, Object key, ActionFactory factory,
-				Class< ? extends WaspAction>[] otherActions)
+			Class<? extends WaspAction>[] otherActions)
 		{
 			super(actions | bitwiseOr(factory, otherActions), name, key);
 		}
 
 		/**
-		 * Creates a bitwise or of all the actions supplied. Note that all these classes
-		 * must already be registered.
+		 * Creates a bitwise or of all the actions supplied. Note that all these classes must
+		 * already be registered.
 		 * 
 		 * @param factory
 		 * @param otherActions
@@ -553,16 +556,16 @@ public class TestActionFactory implements ActionFactory
 		 * @return
 		 */
 		private static final int bitwiseOr(ActionFactory factory,
-				Class< ? extends WaspAction>[] otherActions)
+			Class<? extends WaspAction>[] otherActions)
 		{
 			int result = 0;
 			if (otherActions != null)
 			{
-				Class< ? extends WaspAction> action;
-				for (int i = 0; i < otherActions.length; i++)
+				Class<? extends WaspAction> action;
+				for (Class<? extends WaspAction> otherAction : otherActions)
 				{
-					action = otherActions[i];
-					result = result | ((TestAction) factory.getAction(action)).actions();
+					action = otherAction;
+					result = result | ((TestAction)factory.getAction(action)).actions();
 				}
 			}
 			return result;
